--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     buildCommand: npm install
     startCommand: npm run start 
     envVars:
-      - key: DB_CONNEXION_STRING
+      - key: DB_CONNECTION_STRING
         fronDatabase: esgi-2i1-db
         property: connectionString
 databases:
