--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,16 @@
 services:
   - type: web
     name: esgi-2i1
-    runtime: node
+    runtime: node 
     region: frankfurt
     plan: free
     branch: main
     buildCommand: npm install
-    startCommand: npm run start
+    startCommand: npm run start 
     envVars:
       - key: DB_CONNECTION_STRING
-        valueFromDatabase:
-          property: connectionString
-          database: esgi
+        fromDatabase: esgi-2i1-db
+        property: connectionString
 databases:
-  - name: esgi
+  - name: esgi-2i1-db
     region: frankfurt
