--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,17 @@
 services:
   - type: web
     name: esgi-2i1
-    runtime: node 
+    runtime: node
     region: frankfurt
     plan: free
     branch: main
     buildCommand: npm install
-    startCommand: npm run start 
+    startCommand: npm run start
     envVars:
       - key: DB_CONNECTION_STRING
-        fromDatabase: esgi-2i1-db
-        property: connectionString
+        valueFrom: # This might need to be adjusted based on the exact syntax required
+          database: esgi-2i1-db
+          property: connectionString
 databases:
   - name: esgi-2i1-db
     region: frankfurt
